Fixes H1 Tags on Mobile

--- a/assets/post/spec/typography.css
+++ b/assets/post/spec/typography.css
@@ -26,7 +26,14 @@ body {
 }
 
 /* Headings ================================================================= */
-h1 {font-size: 3rem;}
+h1 {
+    font-size: 2.25rem;
+
+    @media $(p-tablet) {
+        font-size: 3rem;
+    }
+
+}
 h2 {font-size: 2rem;}
 h3 {font-size: 1.5rem;}
 h4 {font-size: 1.35rem;}
